@@ -17,7 +17,6 @@ public class GetPopularProductsUseCase {
     private final OrderRepository orderRepository;
 
     public PopularProductsResponse execute() {
-        // 1. 모든 주문에서 상품별 판매 수량 집계
         Map<Long, Integer> productSalesMap = orderRepository.findAll().stream()
                 .flatMap(order -> order.getOrderItems().stream())
                 .collect(Collectors.groupingBy(
@@ -27,13 +26,12 @@ public class GetPopularProductsUseCase {
 
         List<PopularProductsResponse.PopularProduct> popularProducts;
 
-        // 2. 판매 데이터가 있는 경우: 판매량 기준 정렬
         if (!productSalesMap.isEmpty()) {
             List<Long> topProductIds = productSalesMap.entrySet().stream()
                     .sorted(Map.Entry.<Long, Integer>comparingByValue().reversed())
                     .limit(5)
                     .map(Map.Entry::getKey)
-                    .collect(Collectors.toList());
+                    .toList();
 
             popularProducts = topProductIds.stream()
                     .map(productId -> productRepository.findById(productId).orElse(null))
@@ -47,7 +45,6 @@ public class GetPopularProductsUseCase {
                             .build())
                     .collect(Collectors.toList());
         } else {
-            // 3. 판매 데이터가 없는 경우: 최근 등록된 상품 5개 반환
             popularProducts = productRepository.findAll().stream()
                     .limit(5)
                     .map(product -> PopularProductsResponse.PopularProduct.builder()
